PROJECT(CmdLine)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)


ADD_DEFINITIONS(-DUNICODE)

FILE(GLOB_RECURSE HDRS_FILES *.h *.hpp)
FILE(GLOB_RECURSE SRCS_FILES *.cpp *.c *.cc *.cxx)

INCLUDE_DIRECTORIES(.)

ADD_LIBRARY(${PROJECT_NAME} SHARED  ${HDRS_FILES} ${SRCS_FILES})
#ADD_LIBRARY(${PROJECT_NAME} STATIC  ${HDRS_FILES} ${SRCS_FILES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEFINE_SYMBOL ${PROJECT_NAME_CAPITALIZED}_LIB)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER GeneralLibs)